--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 			<input type="hidden" value="1" name="kh"></input>
 			<input type="hidden" value="1" name="kn"></input>
 			<input type="hidden" value="1" name="kac"></input>
-			<input type="search" placeholder="DuckDuckGo" name="q"></input>
+			<input type="search" placeholder="DuckDuckGo" name="q" autofocus></input>
 		</form>
 	</body>
 
