calendar now is downloaded as an ics file

--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,15 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="/assets/styles.css">
+		<style>
+			input {
+				width: 50%;
+			}
+
+			#clock {
+				font-size: 10rem;
+			}
+		</style>
 	</head>
 
 	<body>
