added <title> elements to html files

--- a/html/index.html
+++ b/html/index.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="/assets/styles.css">
+		<title>Startpage</title>
 		<style>
 			input {
 				width: 50%;
