--- a/html/calendar.html
+++ b/html/calendar.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="/assets/styles.css">
+		<title>Calendar</title>
 		<style>
 			form {
 				display: flex;
